secondfile/objects/AT_T_Price_List_Item__c.object
<CustomObject>
    <description>Object setup to capture Pricing info for ATOM.</description>
    <fields>
        <fullName>AT_T_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AT&amp;T Price List</label>
        <referenceTo>AT_T_Price_List__c</referenceTo>
        <relationshipLabel>AT&amp;T Price List Items</relationshipLabel>
        <relationshipName>AT_T_Price_List_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AT_T_Product_Options__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AT&amp;T Product Options</label>
        <referenceTo>AT_T_Product_Options__c</referenceTo>
        <relationshipLabel>AT&amp;T Price List Items</relationshipLabel>
        <relationshipName>AT_T_Price_List_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Price</fullName>
                </value>
                <value>
                    <fullName>License Fee</fullName>
                </value>
                <value>
                    <fullName>Subscription Fee</fullName>
                </value>
                <value>
                    <fullName>Implementation Fee</fullName>
                </value>
                <value>
                    <fullName>Installation Fee</fullName>
                </value>
                <value>
                    <fullName>Maintenance Fee</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interval__c</fullName>
        <formula>TEXT(AT_T_Price_List__r.Interval_Time__c )</formula>
        <label>Interval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_List_Ext_Id__c</fullName>
        <formula>AT_T_Price_List__r.Price_List_Id__c</formula>
        <label>Price List Ext Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List_Item_Id__c</fullName>
        <externalId>true</externalId>
        <label>Price List Item Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Uom__c</fullName>
        <label>Price Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Option_Ext_Id__c</fullName>
        <formula>AT_T_Product_Options__r.Product_Id__c</formula>
        <label>Product Option Ext Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <formula>TEXT(AT_T_Price_List__r.Price_List_Tier__c)</formula>
        <label>Tier</label>
        <type>Text</type>
    </fields>
    <label>AT&amp;T Price List Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AT_T_Product_Options__c</columns>
        <columns>AT_T_Price_List__c</columns>
        <columns>List_Price__c</columns>
        <columns>Price_Type__c</columns>
        <columns>Price_Uom__c</columns>
        <columns>Charge_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AT&amp;T Price List Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>